Fixed layout issues

--- a/src/app/landing/landing.component.sass
+++ b/src/app/landing/landing.component.sass
@@ -2,8 +2,8 @@
     display: flex
     height: calc(100vh - 18px)
     justify-content: center
-    align-items: left
     flex-direction: column
+    padding: 12px
 .time-component
     font-size: 4em
     line-height: 1em
